# disu.se

./: .gitignore  Makefile  Makefile.in  config.mk  configure.ac
data/: nml.rnc
data/templates/: disuse.xsl
templates/: html2nml.xsl
templates/now/default/: setup.rb
templates/now/default/class/: setup.rb
templates/now/default/class/html/: constructor_details.erb  setup.rb  subclasses.erb
templates/now/default/docstring/: setup.rb
templates/now/default/docstring/html/: text.erb
templates/now/default/fulldoc/html/: setup.rb
templates/now/default/layout/html/: files.erb  headers.erb  layout.erb  setup.rb
templates/now/default/method/html/: header.erb
templates/now/default/method_details/: setup.rb
templates/now/default/method_details/html/: method_signature.erb
templates/now/default/module/: setup.rb
templates/now/default/module/html/: ancestors.erb  box_info.erb  children.erb  class_method_summary.erb  class_methods.erb  classes.erb  constant_summary.erb  extends.erb  header.erb  includers.erb  inherited_constants.erb  inherited_methods.erb  instance_method_summary.erb  instance_methods.erb  item_summary.erb  method_summary.erb  methodmissing.erb  methods.erb  modules.erb  namespace.erb
templates/now/default/tags/: setup.rb
templates/now/default/tags/html/: abstract.erb  deprecated.erb  example.erb  index.erb  (+11 more)
www/: 404.nmt  disuse.xcf  index.css  index.nmc  index.nmt  style.css
www/about/: index.nmc  index.nmt
www/about/contact/: index.nmc  index.nmt
www/about/resume/: index.css  index.nmc  index.nmt
www/articles/piping-quickfix-lists-to-vim/: index.nmc
www/licenses/gpl-3.0/: index.css  index.xsl
www/licenses/lgpl-3.0/: index.css  index.xsl
www/licenses/umd/: index.nmc
www/search/: cse.xml  index.css  index.nml
www/software/: index.nmc  index.nmt
www/software/ame-1.0/api/: index.nmt
(+1 files in other folders)
